Consolidating Provision, Mapping and Items into single JSON column